[package]
name = "futures-concurrency-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
async-executor = "1.12.0"
futures-concurrency = "7.6.0"
futures-lite = "2.3.0"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread"] }
unsend = "0.2.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async", "async_futures", "async_tokio", "csv_output", "html_reports"] }

[profile.bench]
lto = true
codegen-units = 1

[[bench]]
name = "co"
harness = false

