[package]
name = "futures-concurrency-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
async-executor = "1.12.0"
futures-concurrency = "7.6.0"
futures-lite = "2.3.0"
futures-util = { version = "0.3.30", default-features = false, features = ["std"] }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread"] }
unsend = "0.2.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async", "async_futures", "async_tokio", "csv_output", "html_reports"] }
num_cpus = "1.16.0"
rand = { version = "0.8.5", default-features = false, features = ["small_rng", "alloc"] }

[profile.bench]
lto = true
codegen-units = 1

[[bench]]
name = "co"
harness = false

