[package]
name = "futures-concurrency-benchmark"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
async-executor = "1.12.0"
criterion = { version = "0.5.1", features = ["async", "async_futures", "async_tokio", "csv_output", "html_reports"] }
futures-concurrency = "7.6.0"
futures-lite = "2.3.0"
futures-util = { version = "0.3.30", default-features = false, features = ["std"] }
num_cpus = "1.16.0"
rand = { version = "0.8.5", default-features = false, features = ["small_rng", "alloc"] }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread"] }
unsend = "0.2.1"

[profile.bench]
lto = true
codegen-units = 1

[[bench]]
name = "co"
harness = false

[dependencies]
atomic-waker = "1.1.2"

